# Sneakey

sneakey-starter/: README.md  package.json
sneakey-starter/apps/agent/: README.md
sneakey-starter/apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
sneakey-starter/apps/agent/src-tauri/src/: main.rs
sneakey-starter/apps/web/: package.json  tsconfig.json
sneakey-starter/apps/web/app/(dashboard)/: layout.tsx
sneakey-starter/apps/web/app/(dashboard)/devices/: page.tsx
sneakey-starter/apps/web/app/(marketing)/: page.tsx
sneakey-starter/apps/web/app/api/devices/heartbeat/: route.ts
sneakey-starter/apps/web/app/api/devices/login/: route.ts
sneakey-starter/apps/web/app/api/stripe/webhook/: route.ts
sneakey-starter/apps/web/prisma/: schema.prisma
sneakey-starter/apps/web/src/lib/: auth.ts  policies.ts  prisma.ts
sneakey-starter/infra/: docker-compose.yml
