[package]
name = "sneakey-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.1"
rdev = "0.5"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"